Fixed white space around body

--- a/style.css
+++ b/style.css
@@ -1,6 +1,10 @@
+body {
+    margin: 0;
+}
+
 html, body {
     height: 100%;
-    padding: 10px;
+    width: 100%;
 }
 
 #header {
@@ -14,7 +18,7 @@ html, body {
 #logo {
     grid-column: 2 / 3;
     grid-row: 1 / 2;
-    margin-top: 10px;
+    padding-top: 10px;
 }
 
 nav {
@@ -28,7 +32,7 @@ nav {
 #header-img {
     grid-column: 8 / -2;
     grid-row: 2 / 4;
-    margin: 20px;
+    padding: 20px;
 }
 
 h1 {
@@ -57,6 +61,7 @@ article:first-child {
 #books-img {
     grid-column: 2 / 6;
     grid-row: 2 / 3;
+    padding-bottom: 10px;
 }
 
 #books-paragraph {
@@ -79,7 +84,7 @@ article:first-child {
 #basketball-img {
     grid-column: 8 / -2;
     grid-row: 2 / 3;
-    margin-bottom: 10px;
+    padding-bottom: 10px;
 }
 
 #basketball-paragraph {
@@ -113,7 +118,7 @@ article:first-child {
 #travels-img {
     grid-column: 2 / 6;
     grid-row: 2 / 3;
-    margin-bottom: 10px;
+    padding-bottom: 10px;
 }
 
 #travels-paragraph {
